# heychat

./: .gitignore  README.md  package.json  register_protocol.ps1
.github/workflows/: release.yml
scripts/: bump_version.js
site/: app-demo.webm  auth.html  index.html  privacy.html  style.css  terms.html
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: kick.rs  lib.rs  main.rs  models.rs  twitch.rs  youtube.rs
src/components/: ChatInput.tsx  ChatList.tsx  ChatMessageItem.tsx  EmotePicker.tsx  LoginModal.tsx  SettingsPage.tsx  StreamToolsModal.tsx  TitleBar.css  TitleBar.tsx  Toast.tsx  TwitchUserCard.tsx  UpdateNotification.tsx
src/context/: ChatSettingsContext.tsx
src/utils/: chatRenderer.tsx  emotes.ts
