[package]
name = "heychat"
version = "1.0.11"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appheychat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
twitch-irc = { version = "5.0.1", default-features = false, features = ["transport-tcp", "transport-tcp-rustls-native-roots"] }
youtube_chat = "0.2.2"
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4.43"
reqwest = { version = "0.13.1", features = ["json"] }
regex = "1.12.2"
opener = "0.7"
image = "0.24"

