[package]
name = "heychat"
version = "1.0.16"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appheychat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
twitch-irc = { version = "5.0.1", default-features = false, features = ["transport-tcp", "transport-tcp-rustls-native-roots"] }
youtube_chat = "0.2.2"
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4.43"
reqwest = { version = "0.12", features = ["json", "blocking"] }
regex = "1.12.2"
opener = "0.7"
image = "0.24"
tauri-plugin-deep-link = "2.4.6"
sha2 = "0.10.9"
base64 = "0.22.1"
rand = "0.8.5"
tauri-plugin-single-instance = "2.3.7"
urlencoding = "2.1.3"

